--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ ul {
     border-radius: 8px; 
     margin: 20px;
     width: 230px; 
-    height: 40vw;
+    height: 400px;
     box-shadow: 3px 3px 10px rgb(196, 196, 196); 
 }
 
