--- a/styles.css
+++ b/styles.css
@@ -10,21 +10,21 @@ header {
     padding: 15px;
 }
 
-.icon {
+#header-icon {
     float: left; 
     width: auto; 
     height: 60px;; 
     margin-right: 10px; 
 }
 
-h1.header {
+header > h1 {
     margin: 5px 0 0 0;  
     color: #1b8a05; 
     text-align: left; 
     font-size: 2.1rem;
 }
 
-h2.header {
+header > h2 {
     color: #525151;
     text-align: left;
     margin: 0;  
@@ -32,10 +32,9 @@ h2.header {
     font-family: sans-serif;
     font-size: 0.8rem; 
     line-height: 0.7rem; 
-
 }
 
-ul {
+ul.recipe-list {
     list-style: none;
     display: flex; 
     flex-wrap: wrap; 
@@ -43,7 +42,7 @@ ul {
     justify-content: center;
 }
 
-.index-li {
+.recipe-card {
     border: 1px gray; 
     background-color: rgb(253, 252, 251);
     border-radius: 8px; 
@@ -52,6 +51,7 @@ ul {
     height: 400px;
     box-shadow: 3px 3px 10px rgb(196, 196, 196); 
 }
+
 
 .thumbnail {
     height: 230px; 
@@ -71,6 +71,6 @@ footer {
     padding: 10px;
 }
 
-a {
+a{
     color: inherit; 
 }
