--- a/styles.css
+++ b/styles.css
@@ -52,13 +52,14 @@ ul.recipe-list {
     box-shadow: 3px 3px 10px rgb(196, 196, 196); 
 }
 
-
 .thumbnail {
     height: 230px; 
     width: 230px; 
     object-fit: cover;
     border-radius: 8px; 
 }
+
+
 
 footer {
     position: fixed; 
@@ -71,6 +72,7 @@ footer {
     padding: 10px;
 }
 
-a{
+a.recipe-link {
     color: inherit; 
+    text-decoration: none;
 }
