--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 body {
     margin: 0;
     padding: 0; 
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #3a3a3a; 
 }
 
 header { 
@@ -20,12 +22,12 @@ header {
 header > h1 {
     margin: 5px 0 0 0;  
     color: #1b8a05; 
-    text-align: left; 
+    text-align: left;  
     font-size: 2.1rem;
 }
 
 header > h2 {
-    color: #525151;
+    color: #525151; 
     text-align: left;
     margin: 0;  
     text-transform: uppercase;
@@ -48,7 +50,7 @@ ul.recipe-list {
     border-radius: 8px; 
     margin: 20px;
     width: 230px; 
-    height: 400px;
+    height: 335px;
     box-shadow: 3px 3px 10px rgb(196, 196, 196); 
 }
 
@@ -59,7 +61,54 @@ ul.recipe-list {
     border-radius: 8px; 
 }
 
+.recipe-list h3 {
+    text-align: center; 
+    font-weight: 500;
+    font-size: 1.3rem; 
+    margin-bottom: 0;
+}
 
+.recipe-card ul {
+    list-style: none;
+    margin: 0; 
+    padding: 0; 
+    display: flex; 
+    flex-wrap: wrap; 
+    align-items: flex-start; 
+    justify-content: center;
+}
+
+.recipe-card li { 
+    margin: 10px; 
+    padding: 0px;    
+    font-size: 1rem;     
+}
+
+li.servings, li.time  {
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: 0 0 1.3rem 0;
+    padding-left: 1.3rem;
+    color: rgb(78, 78, 78); 
+}
+
+li.servings {
+    background-image: url(./images/serving-icon-30.png);
+
+}
+
+li.time {
+    background-image: url(./images/time-icon-30.png);
+}
+
+.recipe-link {
+    color: inherit; 
+    text-decoration: none;
+}
+
+a {
+    color: inherit; 
+}
 
 footer {
     position: fixed; 
@@ -70,9 +119,4 @@ footer {
     color: #525151; 
     font-size: 14px; 
     padding: 10px;
-}
-
-a.recipe-link {
-    color: inherit; 
-    text-decoration: none;
 }
