--- a/styles.css
+++ b/styles.css
@@ -6,14 +6,14 @@ body {
 }
 
 header { 
-    width: 265px; 
+    width: 19rem; 
     margin: 20px auto 40px; 
 }
 
 #header-icon {
     float: left; 
     width: auto; 
-    height: 60px;; 
+    height: 60px; 
     margin-right: 10px; 
 }
 
@@ -29,9 +29,8 @@ header {
     text-align: left;
     margin: 0;  
     text-transform: uppercase;
-    font-family: sans-serif;
+    font-family: Verdana, sans-serif;
     font-size: 0.8rem; 
-    line-height: 0.7rem; 
 }
 
 header > a {
