Style recipe pages & change background

--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,38 @@
-body {
-    margin: 0;
-    padding: 0; 
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    color: #3a3a3a; 
+:root {
+    --card-background: #fdfcfb;
+    --off-white: #fdfcfb;
+    --shadow: 3px 3px 10px #b9ab94; 
 }
 
-header { 
+
+
+html {
+    overflow: -moz-scrollbars-vertical; 
+    overflow-y: scroll; 
+/* scrollbar remains visible regardless of content */
+}
+
+body {
+    margin: 0;
+    padding-top: 180px; 
+    padding-bottom: 10px; 
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #494545; 
+    background-color: #F1E0C5;
+}
+
+header {
+    top: 0; 
+    width: 100%;  
+    position: fixed; 
+    border-bottom: 1px solid #dacbb2;
+    background-color: var(--off-white);    
+}
+
+.header { 
     width: 19rem; 
-    margin: 20px auto 40px; 
+    margin: 30px auto 40px; 
+    display: block; 
 }
 
 #header-icon {
@@ -43,10 +68,11 @@ footer {
     left: 0; 
     bottom: 0; 
     width: 100%; 
-    background-color: rgb(199, 199, 199);
+    background-color: var(--off-white);
     color: #525151; 
     font-size: 14px; 
     padding: 10px;
+    border-top: 1px solid #dacbb2;
 }
 
 /* recipe list */ 
@@ -57,16 +83,17 @@ ul.recipe-list {
     flex-wrap: wrap; 
     align-items: stretch; 
     justify-content: center;
+    padding: 0; 
+    margin: 0 auto 50px; 
 }
 
 .recipe-card {
-    border: 1px gray; 
-    background-color: rgb(253, 252, 251);
+    background-color: #fdfcfb;
     border-radius: 8px; 
-    margin: 20px;
+    margin: 10px 15px;
     width: 230px; 
     height: 335px;
-    box-shadow: 3px 3px 10px rgb(196, 196, 196); 
+    box-shadow: var(--shadow); 
 }
 
 .thumbnail {
@@ -128,23 +155,91 @@ a {
 
 /* recipe page */ 
 
+.recipe-intro, .ingredients, .steps {
+    letter-spacing: 0.1rem;
+    line-height: 1.2rem; 
+    font-size: 1.1rem; 
+    color: #494545; 
+}
+
 .recipe-intro {
-    width: 900px; 
-    height: 500px; 
+    width: 90%; 
+    max-width: 1000px; 
+    height: 350px; 
     margin: auto; 
-    background-color: darksalmon; 
+    background-color: var(--off-white);  
     display: flex; 
     flex-direction: row; 
+    border-radius: 8px 8px 0 0;
+    box-shadow: var(--shadow);
 }
 
 .intro-text {
-    margin-left: 20px; 
+    margin: 10px 20px 20px; 
+}
+.recipe-intro h1 {
+    letter-spacing: 0.3rem; 
+    text-transform: uppercase;  
+    font-weight: lighter; 
+    font-size: 0.9rem; 
+    text-align: right;
+    color: rgba(235, 86, 0, 0.938); 
+}
+
+.recipe-intro ul {
+    list-style: none;
+    margin-left: 0;  
+    padding: 0; 
 }
 
 .soup-photo {
     margin-left: 0; 
-    height: 500px;
+    height: 350px;
     width: 400px; 
     object-fit: cover;
+    border-radius: 8px 0 0 0;
+}
+
+.ingredients {
+    width: 90%; 
+    max-width: 1000px; 
+    margin: 10px auto; 
+    background-color: var(--off-white); 
+    padding: 10px 0 10px; 
+    box-shadow: var(--shadow); 
+}
+
+.ingredients h2 {
+    margin-left: 20px;
+    letter-spacing: 0.3rem;
+    text-transform: uppercase;
+    font-size: 1.3rem;  
+    color: rgba(235, 86, 0, 0.938);
+}
+
+.ingredients ul {
+    margin: 0 30px 20px 20px; 
+}
+
+.steps {
+    width: 90%; 
+    max-width: 1000px; 
+    margin: 10px auto 60px; 
+    background-color: var(--off-white); 
+    padding: 10px 0 10px;
+    border-radius: 0 0 8px 8px;
+    box-shadow: var(--shadow); 
+}
+
+.steps h2 {
+    margin-left: 20px; 
+    letter-spacing: 0.3rem; 
+    text-transform: uppercase;
+    font-size: 1.2rem;  
+    color: rgba(235, 86, 0, 0.938); 
+}
+
+.steps ol {
+    margin: 0 30px 20px 20px;
 }
 
