--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@ header {
 
 .header { 
     display: flex; 
+    align-items: center; 
     width: 19rem; 
     margin: 0 auto; 
 }
@@ -50,8 +51,7 @@ header {
 
 .heading {
     display: flex; 
-    flex-direction: column;
-    flex-shrink: 1;
+    flex-direction: column; 
     max-height: 60px;
 }
 
@@ -315,14 +315,17 @@ a {
     }
 
     .header {
-        width: 16rem; 
-        flex-basis: 60%; 
+        width: 230px;   
         flex-shrink: 1;
     }
 
     .header h1 {
         margin: 0; 
-        font-size: 2rem; 
+        font-size: 1.8rem; 
+    }
+
+    header h2 {
+        font-size: 0.5rem; 
     }
 
     footer {
@@ -363,4 +366,5 @@ a {
     .recipe-card {
         width: 280px; 
     }
+
 }
